# airflow-provider-tm1

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: build-test.yml  publish_to_pypi.yml  publish_to_testpypi.yml  python-package.yml
airflow_provider_tm1/: __init__.py
airflow_provider_tm1/fs/: __init__.py  blob_storage.py  tm1.py
airflow_provider_tm1/hooks/: tm1.py
airflow_provider_tm1/operators/: tm1_mdx_composor.py  tm1_mdx_query.py  tm1_run_ti.py
airflow_provider_tm1/sensors/: CellSetSensor.py
airflow_provider_tm1/utils/fs/: blob_storage.py
example_dags/: tm1_filesystem_example_dag.py
tests_integration/: Dockerfile  cogstartup.xml  docker-compose.yaml  integration_test.py  settings.yml
tests_integration/dags/: airflow_test_aborted_dag.py  airflow_test_data_error_dag.py  airflow_test_dry_run_dag.py  airflow_test_exeucte_mdx.py  airflow_test_exeucte_mdx_mapped.py  airflow_test_exeucte_mdx_mapreduce.py  airflow_test_params_success_dag.py  airflow_test_success_dag.py  airflow_test_timeout_dag.py
tests_integration/plugins/: airflow_providers_tm1-0.0.7-py3-none-any.whl
tests_integration/tm1models/24Retail/: airflow_test_aborted.pro  airflow_test_data_error.pro  airflow_test_params_success.pro  airflow_test_success.pro  airflow_test_timeout.pro  hello.world  test1.cub  test1.dim  test2.dim  tm1s.cfg  }applicationentries.dim  }capabilities.cub  }clientcamassociatedgroups.cub  }clientgroups.cub  }clientproperties.cub  }clientproperties.dim  }clients.dim  }clientsettings.cub  }clientsettings.dim  }connections.dim  }cube functions.dim  }cubeproperties.dim  }cubesecurityproperties.cub  }cultures.dim  }dimensionformatattributes.dim  }dimensionformatitems.dim  }dimensionproperties.cub  }dimensionproperties.dim  }elementattributes_}clients.cub  }elementattributes_}clients.dim  }elementattributes_}cultures.cub  }elementattributes_}groups.cub  }elementattributes_}groups.dim  }elementproperties.dim  }groups.dim  }hierarchies.dim  }hierarchyproperties.cub  }perfclients.dim  }perfcubes.dim  }permissions.dim  (+12 more)
tests_integration/tm1models/24Retail/}async/: fioghjsnekwhjs_nfkflsej5vzbwo.res  jmpxd5lkmwvfaf-6yb1hac8vxldfq.hdr  jmpxd5lkmwvfaf-6yb1hac8vxldfq.res  kioghjsnekwhjtdmke9hzdiwgcyox.hdr
